// Copyright (c) 2025 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protobuf;

import "scalapb/scalapb.proto";

message VersionedMessageV0 {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  string msg = 1;
}

message VersionedMessageV1 {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";
  string msg = 1;
  int32 value = 2;
}

message VersionedMessageV2 {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";
  string msg = 1;
  int32 iValue = 2;
  double dValue = 3;
}
